RESOLVED FIXED 249306
MediaStreamTrack audio rendering is broken in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=249306
Summary MediaStreamTrack audio rendering is broken in WKWebView
youenn fablet
Reported 2022-12-14 05:45:44 PST
MediaStreamTrack audio rendering is broken in WKWebView
Attachments
youenn fablet
Comment 1 2022-12-14 05:45:56 PST
youenn fablet
Comment 2 2022-12-14 05:50:41 PST
EWS
Comment 3 2022-12-14 08:07:29 PST
Committed 257858@main (fd88fcd94620): <https://commits.webkit.org/257858@main> Reviewed commits have been landed. Closing PR #7608 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.