Cherry-pick fd88fcd94620. rdar://problem/102469310

MediaStreamTrack audio rendering is broken in WKWebView
    https://bugs.webkit.org/show_bug.cgi?id=249306
    rdar://102469310

    Reviewed by Eric Carlson.

    WebProcess is no longer getting access to audio rendering services.
    We have the code to do audio rendering in GPUProcess for MediaStreamTrack but it was enabled only for capture happening in GPUProcess.
    Enable this code path also when capture is done in UIProcess.

    * Source/WebKit/WebProcess/cocoa/UserMediaCaptureManager.cpp:
    (WebKit::UserMediaCaptureManager::setupCaptureProcesses):

    Canonical link: https://commits.webkit.org/257858@main

Canonical link: https://commits.webkit.org/252432.956@safari-7614-branch